src/test/deca/syntax/invalid/provided/include_invalid.deca
// Description
//   Include non-existing file
//
// Résultats:
//    :1:28: doesnt_exist.deca: include file not found

#include "doesnt_exist.deca"

{println("doenst exist");}
